--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Gallery</title>
 </head>
 <body>
@@ -32,3 +32,4 @@
   <script src="gallery.js"></script>
 </body>
 </html>
+
