--- a/about.html
+++ b/about.html
@@ -9,6 +9,19 @@
 
 </head>
 <body>
+
+    <header>
+        <h1>Horticultural Society of Trinidad & Tobago</h1>
+        <nav>
+            <ul>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/gallery">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    
 <h1>About Us</h1>
 
 <div class="about">
