--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Gallery</title>
+     <link rel="stylesheet" type="text/css" href="styles.css">
+  
 </head>
 <body>
 
@@ -43,4 +43,5 @@
   <script src="gallery.js"></script>
 </body>
 </html>
+
 
