--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
         <h1>Horticultural Society of Trinidad & Tobago</h1>
         <nav>
             <ul>
-                <li><a href="/home">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
-                <li><a href="/gallery">Gallery</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p><a href="/home">Back to Home</a></p>
+        <p><a href="home.html">Back to Home</a></p>
     </footer>
 
 </body>
