--- a/home.html
+++ b/home.html
@@ -8,27 +8,61 @@
 </head>
 <body>
 
-    <header>
-        <h1>Horticultural Society of Trinidad & Tobago</h1>
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="main-header">
+    <h1 class="hh1">Horticultural Society of Trinidad & Tobago</h1>
+
+    <nav class="main-nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
+</header>
+
 
     <main>
+
+    <div class="home">
+
         <h2>Welcome to the Horticultural Society of Trinidad & Tobago</h2>
+
+        <!-- LP -->
+        <img src="Images/Home1.jpeg" class="home1" alt="Home">
+
         <p>Promoting the love and knowledge of gardening, horticulture, and floral arts throughout Trinidad and Tobago.</p>
         <p>Join us for workshops, shows, and meetings!</p>
+
+        
+
+    </div>
+
+<div class="row">
+  <div class="column">
+    <img src="Images/gardening.jpeg" alt="Image 1">
+    <!-- <p>Column 1</p> -->
+  </div>
+
+  <div class="column">
+    <img src="Images/horticulture.jpeg" alt="Image 2">
+    <!-- <p>Column 2</p> -->
+  </div>
+
+  <div class="column">
+    <img src="Images/flora.jpeg" alt="Image 3">
+    <!-- <p>Column 3</p> -->
+  </div>
+</div>
+
     </main>
 
-    <footer>
+    <!-- LP -->
+    <footer class="footer1">
         <p>&copy; 2025 Horticultural Society of Trinidad & Tobago</p>
     </footer>
 
+    <!-- <p>&copy; 2025 Horticultural Society of Trinidad & Tobago</p> -->
 </body>
 </html>
+
