--- a/contact.html
+++ b/contact.html
@@ -8,49 +8,52 @@
 </head>
 <body>
 
-    <header>
-        <h1>Horticultural Society of Trinidad & Tobago</h1>
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="main-header">
+    <h1 class="hh1">Horticultural Society of Trinidad & Tobago</h1>
 
-    <main>
-        <h2>Get in Touch🌻</h2>
+    <nav class="main-nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
+</header>
 
-        <section>
-            <h3>Our Location</h3>
-            <p><strong>Physical Address:</strong></p>
-            <address>
-                25 Lady Chancellor Road,<br>
-                Port of Spain,<br>
-                Trinidad and Tobago
-            </address>
-        </section>
+   <main class="contact-section">
+    <h2>Get in Touch🌻</h2>
 
-        <section>
-            <h3>Contact Information</h3>
-            <ul>
-                <li><strong>Email:</strong> <a href="mailto:info@hstt.org.tt">info@hstt.org.tt</a></li>
-                <li><strong>Phone:</strong> (868) 622-3000</li>
-                <li><strong>WhatsApp:</strong> (868) 789-4567 (Message only)</li>
-            </ul>
-        </section>
+    <section>
+        <h3>Our Location</h3>
+        <p><strong>Physical Address:</strong></p>
+        <address>
+            25 Lady Chancellor Road,<br>
+            Port of Spain,<br>
+            Trinidad and Tobago
+        </address>
+    </section>
 
-        <section>
-            <h3>Send Us a Message</h3>
-            <p>For general inquiries, please use the email address above. We look forward to hearing from you!</p>
-        </section>
-    </main>
+    <section>
+        <h3>Contact Information</h3>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:info@hstt.org.tt">info@hstt.org.tt</a></li>
+            <li><strong>Phone:</strong> (868) 622-3000</li>
+            <li><strong>WhatsApp:</strong> (868) 789-4567 (Message only)</li>
+        </ul>
+    </section>
 
-    <footer>
-        <p><a href="home.html">Back to Home</a></p>
+    <section>
+        <h3>Send Us a Message</h3>
+        <p>For general inquiries, please use the email address above. We look forward to hearing from you!</p>
+    </section>
+</main>
+
+    <footer class="footer1">
+        <p class="c1"><a href="home.html">Back to Home</a></p>
+        <p>&copy; 2025 Horticultural Society of Trinidad & Tobago</p>
     </footer>
 
 </body>
 </html>
+
