--- a/about.html
+++ b/about.html
@@ -10,19 +10,24 @@
 </head>
 <body>
 
-    <header>
-        <h1>Horticultural Society of Trinidad & Tobago</h1>
-        <nav>
-            <ul>
-               <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="main-header">
+    <h1 class="hh1">Horticultural Society of Trinidad & Tobago</h1>
+
+    <nav class="main-nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
+</header>
     
-<h1>About Us</h1>
+    <main>
+
+
+
+<h1 class="ah1">About Us</h1>
 
 <div class="about">
     <p>
@@ -54,10 +59,19 @@
 
     <h3>Our Mission</h3>
     <p>Lorem ipsum dolor sit amet...</p>
+
+
+    </main>
+
 </div>
+
+    <footer class="footer1">
+        <p>&copy; 2025 Horticultural Society of Trinidad & Tobago</p>
+    </footer>
 
 </body>
 </html>
+
 
 
 
