--- a/gallery.html
+++ b/gallery.html
@@ -10,19 +10,20 @@
 </head>
 <body>
 
-    <header>
-        <h1>Horticultural Society of Trinidad & Tobago</h1>
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="main-header">
+    <h1 class="hh1">Horticultural Society of Trinidad & Tobago</h1>
+
+    <nav class="main-nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
+</header>
     
-  <h1>Gallery</h1>
+  <h1 class="g1">Gallery</h1>
 
   <div class="thumbnails">
 
@@ -41,8 +42,12 @@
 
   </div>
   <script src="gallery.js"></script>
+
+
+  
 </body>
 </html>
+
 
 
 
