1. updated gallery.html to have footer. 2. uploaded missing gallery images. 3. updated styles.css to match

--- a/gallery.html
+++ b/gallery.html
@@ -23,28 +23,29 @@
     </nav>
 </header>
     
-  <h1 class="g1">Gallery</h1>
 
+
+<div class="gallery-container">
   <div class="thumbnails">
 
-      <img id="1" src="images/thumbnails/1.jpg" onclick = "displayImage('1')">
-      <img id="2" src="images/thumbnails/2.jpg" onclick = "displayImage('2')">
-      <img id="3" src="images/thumbnails/3.jpg" onclick = "displayImage('3')">
-      <img id="4" src="images/thumbnails/4.jpg" onclick = "displayImage('4')">
-      <img id="5" src="images/thumbnails/5.jpg" onclick = "displayImage('5')">
+      <img id="1" src="images/thumbnails/1.jpg" alt="seedlings" onclick = "displayImage('1')">
+      <img id="2" src="images/thumbnails/2.jpg" alt="potatoes" onclick = "displayImage('2')">
+      <img id="3" src="images/thumbnails/3.jpg" alt="flower atrium" onclick = "displayImage('3')">
+      <img id="4" src="images/thumbnails/4.jpg" alt="tree replanting" onclick = "displayImage('4')">
+      <img id="5" src="images/thumbnails/5.jpg" alt="vegetable atrium" onclick = "displayImage('5')">
 
   </div>
 
-  <div class="galleryDisplay" id="display" >
-
-
-      <img id="fullImage" src="images/welcome.jpg">
-
+        <div class="galleryDisplay" id="display" >
+            <img id="fullImage" alt="" src="images/welcome.jpg">
+        </div>
   </div>
+
+<footer class="footer1">
+    <p>&copy; 2025 Horticultural Society of Trinidad & Tobago</p>
+</footer>
+
   <script src="gallery.js"></script>
-
-
-  
 </body>
 </html>
 
