--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
     <nav class="main-nav">
         <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
@@ -71,6 +71,7 @@
 
 </body>
 </html>
+
 
 
 
