Fix folder case

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <h2>Welcome to the Horticultural Society of Trinidad & Tobago</h2>
 
-        <img src="Images/Home1.jpeg" class="home1" alt="Home">
+        <img src="images/Home1.jpeg" class="home1" alt="Home">
 
         <p>Promoting the love and knowledge of gardening, horticulture, and floral arts throughout Trinidad and Tobago.</p>
         <p>Join us for workshops, shows, and meetings!</p>
@@ -39,17 +39,17 @@
 
 <div class="row">
   <div class="column">
-    <img src="Images/gardening.jpeg" alt="Image 1">
+    <img src="images/gardening.jpeg" alt="Image 1">
     <!-- <p>Column 1</p> -->
   </div>
 
   <div class="column">
-    <img src="Images/horticulture.jpeg" alt="Image 2">
+    <img src="images/horticulture.jpeg" alt="Image 2">
     <!-- <p>Column 2</p> -->
   </div>
 
   <div class="column">
-    <img src="Images/flora.jpeg" alt="Image 3">
+    <img src="images/flora.jpeg" alt="Image 3">
     <!-- <p>Column 3</p> -->
   </div>
 </div>
