Fix gallery image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <h2>Welcome to the Horticultural Society of Trinidad & Tobago</h2>
 
-        <img src="images/Home1.jpeg" class="home1" alt="Home">
+        <img src="images/welcome.jpeg" class="home1" alt="Home">
 
         <p>Promoting the love and knowledge of gardening, horticulture, and floral arts throughout Trinidad and Tobago.</p>
         <p>Join us for workshops, shows, and meetings!</p>
