--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
   </div>
 
         <div class="galleryDisplay" id="display" >
-            <img id="fullImage" alt="" src="images/welcome.jpg">
+            <img id="fullImage" alt="" src="images/welcome.jpeg">
         </div>
   </div>
 
@@ -48,6 +48,7 @@
   <script src="gallery.js"></script>
 </body>
 </html>
+
 
 
 
